--- a/in_good_hands/templates/base.html
+++ b/in_good_hands/templates/base.html
@@ -9,18 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
   </head>
   <body>
-    <header class="header--form-page">
-      <nav class="container container--70">
-        <ul class="nav--actions">
-          <li class="logged-user">
-            Witaj Agata
-            <ul class="dropdown">
-              <li><a href="#">Profil</a></li>
-              <li><a href="#">Moje zbiórki</a></li>
-              <li><a href="#">Wyloguj</a></li>
-            </ul>
-          </li>
-        </ul>
+
 
         <ul>
           <li><a href="/" class="btn btn--without-border active">Start</a></li>
@@ -30,7 +19,7 @@
           <li><a href="#contact" class="btn btn--without-border">Kontakt</a></li>
         </ul>
       </nav>
-
+        {%  block content %} {%  endblock %}
 
 
     <footer>
