--- a/in_good_hands/templates/form.html
+++ b/in_good_hands/templates/form.html
@@ -1,6 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
 
+        <header class="header--form-page">
+      <nav class="container container--70">
+        <ul class="nav--actions">
+          <li class="logged-user">
+              {% if name %}
+            Witaj {{  name }}
+              {%  endif %}
+            <ul class="dropdown">
+              <li><a href="#">Profil</a></li>
+              <li><a href="#">Moje zbiórki</a></li>
+              <li><a href="/logout">Wyloguj</a></li>
+            </ul>
+          </li>
+        </ul>
+
       <div class="slogan container container--90">
         <div class="slogan--item">
           <h1>
@@ -58,6 +73,7 @@
             <h3>Zaznacz co chcesz oddać:</h3>
 
             <div class="form-group form-group--checkbox">
+                {%  for category in categories %}
               <label>
                 <input
                   type="checkbox"
@@ -66,38 +82,16 @@
                 />
                 <span class="checkbox"></span>
                 <span class="description"
-                  >ubrania, które nadają się do ponownego użycia</span
+                  >
+
+                    {{ category.name }}
+
+                </span
                 >
               </label>
+                 {% endfor %}
             </div>
 
-            <div class="form-group form-group--checkbox">
-              <label>
-                <input
-                  type="checkbox"
-                  name="categories"
-                  value="clothes-useless"
-                />
-                <span class="checkbox"></span>
-                <span class="description">ubrania, do wyrzucenia</span>
-              </label>
-            </div>
-
-            <div class="form-group form-group--checkbox">
-              <label>
-                <input type="checkbox" name="categories" value="toys" />
-                <span class="checkbox"></span>
-                <span class="description">zabawki</span>
-              </label>
-            </div>
-
-            <div class="form-group form-group--checkbox">
-              <label>
-                <input type="checkbox" name="categories" value="books" />
-                <span class="checkbox"></span>
-                <span class="description">książki</span>
-              </label>
-            </div>
 
             <div class="form-group form-group--checkbox">
               <label>
@@ -131,7 +125,7 @@
 
 
 
-          <!-- STEP 4 -->
+          <!-- STEP 3 -->
           <div data-step="3">
             <h3>Wybierz organizacje, której chcesz pomóc:</h3>
 
@@ -169,7 +163,7 @@
             </div>
           </div>
 
-          <!-- STEP 5 -->
+          <!-- STEP 4 -->
           <div data-step="4">
             <h3>Podaj adres oraz termin odbioru rzecz przez kuriera:</h3>
 
