--- a/in_good_hands/templates/login.html
+++ b/in_good_hands/templates/login.html
@@ -3,7 +3,9 @@
 
     <section class="login-page">
       <h2>Zaloguj się</h2>
-      <form>
+      <form method="post">
+          {%  csrf_token %}
+          {{ message }}
         <div class="form-group">
           <input type="email" name="email" placeholder="Email" />
         </div>
@@ -13,7 +15,7 @@
         </div>
 
         <div class="form-group form-group--buttons">
-          <a href="#" class="btn btn--without-border">Załóż konto</a>      
+          <a href="register.html" class="btn btn--without-border">Załóż konto</a>
           <button class="btn" type="submit">Zaloguj się</button> 
         </div>
       </form>
