--- a/in_good_hands/templates/register.html
+++ b/in_good_hands/templates/register.html
@@ -4,6 +4,7 @@
     <section class="login-page">
       <h2>Załóż konto</h2>
       <form method="post">
+          {%  csrf_token %}
         <div class="form-group">
           <input type="text" name="name" placeholder="Imię" />
         </div>
