--- a/in_good_hands/templates/user-page.html
+++ b/in_good_hands/templates/user-page.html
@@ -4,19 +4,23 @@
       <nav class="container container--70">
         <ul class="nav--actions">
           <li class="logged-user">
-            <ul class="dropdown">
+             {% if user %}
+            Witaj {{  user.first_name }}
+              {% endif %}
+              <ul class="dropdown">
               <li><a href="/user-page">Profil</a></li>
               <li><a href="#">Moje zbiórki</a></li>
-              <li><a href="logout">Wyloguj</a></li>
+              <li><a href="/logout">Wyloguj</a></li>
             </ul>
           </li>
         </ul>
 
       <div class="slogan container container--90">
-          <h2>
-            Dziękujemy za przesłanie formularza Na maila prześlemy wszelkie
-            informacje o odbiorze.
-          </h2>
+          <div class="slogan--item">
+          <h1>
+            {{ name }} {{ surname }}  <br />
+              {{ email }}
+          </h1>
       </div>
     </header>
 
